--- a/index.html
+++ b/index.html
@@ -111,6 +111,10 @@ table tr {
   background: #011e5d;
 }
 }
+  .ld3 {
+  background: linear-gradient(rgba(12, 49, 128, 0.89),rgba(56, 91, 166, 0.877)), url("images/LOgo.svg");
+  background-size: contain;
+}
 </style>
 
 <body>
@@ -130,7 +134,7 @@ table tr {
         <div class="hd2n">
           <div class="hdn1"></div>
           <div class="hdn2">
-            <div>News : Players are training Now</div>
+            <div><span>News :</span> ACL Match 4 ; Mumbai City FC 0-2 Al Hilal SFC</div>
           </div>
         </div>
         <div class="hd2menu">
