Update fixture.html news

--- a/fixture.html
+++ b/fixture.html
@@ -54,7 +54,7 @@
         <div class="hd2n">
           <div class="hdn1"></div>
           <div class="hdn2">
-            <div>News : Players are training Now</div>
+            <div><span>News :</span> ACL Match 4 ; Mumbai City FC 0-2 Al Hilal SFC</div>
           </div>
         </div>
         <div class="hd2menu">
