--- a/news.html
+++ b/news.html
@@ -156,7 +156,7 @@
       <div class="hd2n">
         <div class="hdn1"></div>
         <div class="hdn2">
-          <div>News : Players are training Now</div>
+          <div><span>News :</span> ACL Match 4 ; Mumbai City FC 0-2 Al Hilal SFC</div>
         </div>
       </div>
       <div class="hd2menu">
