Update index.html brand

--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@ table tr {
     <div class="last2">
       <div>
         <center>
-          <s>Allcopyright claim Reseaved @ 2023</s>
+          <s>Allcopyright claim Reseved anfasdx@ 2023</s>
         </center>
       </div>
     </div>
