Update squad.html changes

--- a/squad.html
+++ b/squad.html
@@ -28,7 +28,7 @@
     .box {
       width: 20vw;
       height: 12vw;
-      background-image: url("images/bg-ban.jpg");
+      background-image: url("images/bg-ban11.jpg");
       background-repeat: no-repeat;
       background-size: 100% 100%;
       border-radius: 10px;
